--- a/app/_locales/da/messages.json
+++ b/app/_locales/da/messages.json
@@ -33,7 +33,7 @@
     "message": "aktivitetslog"
   },
   "addAcquiredTokens": {
-    "message": "Tilføj de tokens du har erhvervet ved hjælp af Qnekt"
+    "message": "Tilføj de tokens du har erhvervet ved hjælp af Altmasq"
   },
   "addAlias": {
     "message": "Tilføj alias"
@@ -61,15 +61,15 @@
     "description": "The description of the application"
   },
   "appName": {
-    "message": "Qnekt",
+    "message": "Altmasq",
     "description": "The name of the application"
   },
   "appNameBeta": {
-    "message": "Qnekt Beta",
+    "message": "Altmasq Beta",
     "description": "The name of the application (Beta)"
   },
   "appNameFlask": {
-    "message": "Qnekt Flask",
+    "message": "Altmasq Flask",
     "description": "The name of the application (Flask)"
   },
   "approve": {
@@ -97,7 +97,7 @@
     "message": "Timer for automatisk udlogning (minutter)"
   },
   "autoLockTimeLimitDescription": {
-    "message": "Indstil den passive tid i minutter, før Qnekt automatisk logger dig ud"
+    "message": "Indstil den passive tid i minutter, før Altmasq automatisk logger dig ud"
   },
   "average": {
     "message": "Gennemsnit"
@@ -109,7 +109,7 @@
     "message": "Tilbage til Alle"
   },
   "backupApprovalInfo": {
-    "message": "Den hemmelige kode er påkrævet for at gendanne din pung, hvis du mister din enhed, glemmer dit kodeord, er nødt til at geninstallere Qnekt eller ønsker adgang til din pung fra en anden enhed."
+    "message": "Den hemmelige kode er påkrævet for at gendanne din pung, hvis du mister din enhed, glemmer dit kodeord, er nødt til at geninstallere Altmasq eller ønsker adgang til din pung fra en anden enhed."
   },
   "backupApprovalNotice": {
     "message": "Sikkerhedskopiér din Hemmelige Gendannelseskode for at holde din tegnebog og dine penge sikre."
@@ -140,7 +140,7 @@
     "message": "Køb $1 med Wyre"
   },
   "buyWithWyreDescription": {
-    "message": "Wyre lader dig bruge et kreditkort til at indbetale $1 på din Qnekt-konto."
+    "message": "Wyre lader dig bruge et kreditkort til at indbetale $1 på din Altmasq-konto."
   },
   "bytes": {
     "message": "Byte"
@@ -158,7 +158,7 @@
     "message": "Kæde-ID"
   },
   "chromeRequiredForHardwareWallets": {
-    "message": "Du skal bruge Qnekt i Google Chrome for at forbinde med din Hardware Wallet."
+    "message": "Du skal bruge Altmasq i Google Chrome for at forbinde med din Hardware Wallet."
   },
   "clickToRevealSeed": {
     "message": "Klik her for at se hemmelige ord"
@@ -317,13 +317,13 @@
     "message": "Del aldrig frasen med nogen."
   },
   "endOfFlowMessage5": {
-    "message": "Vær varsom med phishing! Qnekt vil aldrig spontant bede om din seedfrase."
+    "message": "Vær varsom med phishing! Altmasq vil aldrig spontant bede om din seedfrase."
   },
   "endOfFlowMessage6": {
     "message": "Hvis du får brug for at lave en backup af din seedfrase igen, kan du finde det under Indstillinger -> Sikkerhed."
   },
   "endOfFlowMessage8": {
-    "message": "Qnekt kan ikke gendanne din seed-sætning. Få mere at vide."
+    "message": "Altmasq kan ikke gendanne din seed-sætning. Få mere at vide."
   },
   "endOfFlowMessage9": {
     "message": "Lær mere. "
@@ -421,7 +421,7 @@
     "message": "Tilslut en hardware-tegnebog"
   },
   "hardwareWalletsMsg": {
-    "message": "Vælg en hardware-pung du vil bruge med Qnekt"
+    "message": "Vælg en hardware-pung du vil bruge med Altmasq"
   },
   "here": {
     "message": "her",
@@ -447,7 +447,7 @@
     "message": "Importer konto"
   },
   "importAccountMsg": {
-    "message": "Importerede konti vil ikke blive forbundet med din oprindeligt oprettede seed-sætning for din Qnekt-konto. Få mere at vide om importerede konti"
+    "message": "Importerede konti vil ikke blive forbundet med din oprindeligt oprettede seed-sætning for din Altmasq-konto. Få mere at vide om importerede konti"
   },
   "importAccountSeedPhrase": {
     "message": "Importér en Konto med Seedfrase"
@@ -585,8 +585,8 @@
   "newPassword": {
     "message": "Ny adgangskode (min. 8 tegn)"
   },
-  "newToQnekt": {
-    "message": "Ny på Qnekt?"
+  "newToAltmasq": {
+    "message": "Ny på Altmasq?"
   },
   "newTotal": {
     "message": "Ny Sum"
@@ -637,7 +637,7 @@
     "message": "Deltag i MetaMetrics"
   },
   "participateInMetaMetricsDescription": {
-    "message": "Deltag i MetaMetrics for at hjælpe os med at gøre Qnekt bedre"
+    "message": "Deltag i MetaMetrics for at hjælpe os med at gøre Altmasq bedre"
   },
   "password": {
     "message": "Adgangskode"
@@ -900,16 +900,16 @@
     "message": "Sørg for at der ikke er nogen der kigger på din skærm, når du scanner denne kode"
   },
   "syncWithMobileComplete": {
-    "message": "Dine data er blevet synkroniseret korrekt. Nyd Qnekt-mobilappen!"
+    "message": "Dine data er blevet synkroniseret korrekt. Nyd Altmasq-mobilappen!"
   },
   "syncWithMobileDesc": {
-    "message": "Du kan synkronisere dine konti og informationer med din mobilenhed. Åbn Qnekt-mobilappen, gå til \"Indstillinger\" og tryk på \"Synkroniser fra browserudvidelse\""
+    "message": "Du kan synkronisere dine konti og informationer med din mobilenhed. Åbn Altmasq-mobilappen, gå til \"Indstillinger\" og tryk på \"Synkroniser fra browserudvidelse\""
   },
   "syncWithMobileDescNewUsers": {
-    "message": "Hvis du netop har åbnet Qnekt-mobilappen for første gang, skal du blot følge trinnene på din telefon."
+    "message": "Hvis du netop har åbnet Altmasq-mobilappen for første gang, skal du blot følge trinnene på din telefon."
   },
   "syncWithMobileScanThisCode": {
-    "message": "Scan denne kode med din Qnekt-mobilapp"
+    "message": "Scan denne kode med din Altmasq-mobilapp"
   },
   "syncWithMobileTitle": {
     "message": "Synkroniser med mobil"
@@ -994,7 +994,7 @@
     "message": "Prøv igen"
   },
   "typePassword": {
-    "message": "Skriv din Qnekt-adgangskode"
+    "message": "Skriv din Altmasq-adgangskode"
   },
   "unapproved": {
     "message": "Ikke godkendt"
@@ -1045,7 +1045,7 @@
     "message": "Besøg vores webside"
   },
   "welcome": {
-    "message": "Velkommen til Qnekt"
+    "message": "Velkommen til Altmasq"
   },
   "welcomeBack": {
     "message": "Velkommen tilbage!"
