--- a/app/_locales/sl/messages.json
+++ b/app/_locales/sl/messages.json
@@ -33,7 +33,7 @@
     "message": "dnevnik dejavnosti"
   },
   "addAcquiredTokens": {
-    "message": "Dodaj žetone pridobljene z Qnekt"
+    "message": "Dodaj žetone pridobljene z Altmasq"
   },
   "addAlias": {
     "message": "Dodaj vzdevek"
@@ -61,15 +61,15 @@
     "description": "The description of the application"
   },
   "appName": {
-    "message": "Qnekt",
+    "message": "Altmasq",
     "description": "The name of the application"
   },
   "appNameBeta": {
-    "message": "Qnekt Beta",
+    "message": "Altmasq Beta",
     "description": "The name of the application (Beta)"
   },
   "appNameFlask": {
-    "message": "Qnekt Flask",
+    "message": "Altmasq Flask",
     "description": "The name of the application (Flask)"
   },
   "approve": {
@@ -97,7 +97,7 @@
     "message": "Časovnik za samodejno odjavo (minute)"
   },
   "autoLockTimeLimitDescription": {
-    "message": "Nastavite, po koliko minutah mirovanja naj se Qnekt samodejno odjavi"
+    "message": "Nastavite, po koliko minutah mirovanja naj se Altmasq samodejno odjavi"
   },
   "average": {
     "message": "Povprečje"
@@ -109,7 +109,7 @@
     "message": "Nazaj na vse"
   },
   "backupApprovalInfo": {
-    "message": "Ta skrivna koda je potrebna za obnovitev denarnice, če izgubite napravo, pozabite geslo, ponovno namestite Qnekt ali želite dostopati do denarnice v drugi napravi."
+    "message": "Ta skrivna koda je potrebna za obnovitev denarnice, če izgubite napravo, pozabite geslo, ponovno namestite Altmasq ali želite dostopati do denarnice v drugi napravi."
   },
   "backupApprovalNotice": {
     "message": "Varnostno kopirajte kodo Secret Recovery, da ohranite denarnico in sredstva varna."
@@ -140,7 +140,7 @@
     "message": "Kupi $1 z Wyre"
   },
   "buyWithWyreDescription": {
-    "message": "Wyre vam omogoča, da s kreditno kartico nakažete $1 neposredno na svoj račun Qnekt."
+    "message": "Wyre vam omogoča, da s kreditno kartico nakažete $1 neposredno na svoj račun Altmasq."
   },
   "bytes": {
     "message": "Bajti"
@@ -317,13 +317,13 @@
     "message": "Nikoli nikomur ne razkrijte svojega gesla seed phrase."
   },
   "endOfFlowMessage5": {
-    "message": "Pazite na lažno predstavljanje! Qnekt nikoli ne bo spontano zaprosil za vaše geslo seed phrase."
+    "message": "Pazite na lažno predstavljanje! Altmasq nikoli ne bo spontano zaprosil za vaše geslo seed phrase."
   },
   "endOfFlowMessage6": {
     "message": "Če morate ponovno varnostno kopirati vaše geslo seed phrase, ga najdete v Nastavitve -> Varnost."
   },
   "endOfFlowMessage8": {
-    "message": "Qnekt ne more obnoviti vašega gesla seed phrase. Več informacij."
+    "message": "Altmasq ne more obnoviti vašega gesla seed phrase. Več informacij."
   },
   "endOfFlowMessage9": {
     "message": "Več o tem"
@@ -543,7 +543,7 @@
     "message": "Sporočilo"
   },
   "metamaskDescription": {
-    "message": "Qnekt je varen identitetni sklad za Ethereum."
+    "message": "Altmasq je varen identitetni sklad za Ethereum."
   },
   "metamaskVersion": {
     "message": "Različica"
@@ -589,8 +589,8 @@
   "newPassword": {
     "message": "Novo geslo (min 8 znakov)"
   },
-  "newToQnekt": {
-    "message": "Ste novi na Qnekt?"
+  "newToAltmasq": {
+    "message": "Ste novi na Altmasq?"
   },
   "newTotal": {
     "message": "Novo skupno"
@@ -644,7 +644,7 @@
     "message": "Sodelujte v MetaMetrics"
   },
   "participateInMetaMetricsDescription": {
-    "message": "Sodelujte v MetaMetrics in nam pomagajte izboljšati Qnekt"
+    "message": "Sodelujte v MetaMetrics in nam pomagajte izboljšati Altmasq"
   },
   "password": {
     "message": "Geslo"
@@ -913,16 +913,16 @@
     "message": "Ko skenirate to kodo, naj nihče ne kuka na vaš zaslon"
   },
   "syncWithMobileComplete": {
-    "message": "Vaši podatki so uspešno sinhronizirani. Uživajte v mobilni aplikaciji Qnekt!"
+    "message": "Vaši podatki so uspešno sinhronizirani. Uživajte v mobilni aplikaciji Altmasq!"
   },
   "syncWithMobileDesc": {
-    "message": "Račune in podatke lahko sinhronizirate s svojo mobilno napravo. Odprite mobilno aplikacijo Qnekt, pojdite na \"Nastavitve\" in tapnite \"Sinhroniziraj z razširitvijo brskalnika\""
+    "message": "Račune in podatke lahko sinhronizirate s svojo mobilno napravo. Odprite mobilno aplikacijo Altmasq, pojdite na \"Nastavitve\" in tapnite \"Sinhroniziraj z razširitvijo brskalnika\""
   },
   "syncWithMobileDescNewUsers": {
-    "message": "Če ste sedaj prvič odprli aplikacijo Qnekt Mobile, samo sledite korakom v telefonu."
+    "message": "Če ste sedaj prvič odprli aplikacijo Altmasq Mobile, samo sledite korakom v telefonu."
   },
   "syncWithMobileScanThisCode": {
-    "message": "Skenirajte to kodo z mobilno aplikacijo Qnekt"
+    "message": "Skenirajte to kodo z mobilno aplikacijo Altmasq"
   },
   "syncWithMobileTitle": {
     "message": "Sinhroniziraj z mobilnimi telefonom"
@@ -1013,7 +1013,7 @@
     "message": "Poskusi znova"
   },
   "typePassword": {
-    "message": "Vnesite vaše Qnekt geslo"
+    "message": "Vnesite vaše Altmasq geslo"
   },
   "unapproved": {
     "message": "Neodobreno"
@@ -1064,7 +1064,7 @@
     "message": "Obiščite našo spletno stran"
   },
   "welcome": {
-    "message": "Dobrodošli v Qnekt"
+    "message": "Dobrodošli v Altmasq"
   },
   "welcomeBack": {
     "message": "Dobrodošli nazaj!"
