--- a/app/_locales/sw/messages.json
+++ b/app/_locales/sw/messages.json
@@ -33,7 +33,7 @@
     "message": "kumbukumbu ya shughuli"
   },
   "addAcquiredTokens": {
-    "message": "Ongeza vianzio ulivyopata kwa kutumia Qnekt"
+    "message": "Ongeza vianzio ulivyopata kwa kutumia Altmasq"
   },
   "addAlias": {
     "message": "Ongeza jina jingine"
@@ -61,15 +61,15 @@
     "description": "The description of the application"
   },
   "appName": {
-    "message": "Qnekt",
+    "message": "Altmasq",
     "description": "The name of the application"
   },
   "appNameBeta": {
-    "message": "Qnekt Beta",
+    "message": "Altmasq Beta",
     "description": "The name of the application (Beta)"
   },
   "appNameFlask": {
-    "message": "Qnekt Flask",
+    "message": "Altmasq Flask",
     "description": "The name of the application (Flask)"
   },
   "approve": {
@@ -97,7 +97,7 @@
     "message": "Kihesabu Muda wa Kuondoka Kwenye Akaunti Kiotomatiki (dakika)"
   },
   "autoLockTimeLimitDescription": {
-    "message": "Weka muda katika dakika kabla Qnekt haijaondoa kwenye akaunti kiotomatiki."
+    "message": "Weka muda katika dakika kabla Altmasq haijaondoa kwenye akaunti kiotomatiki."
   },
   "average": {
     "message": "Wastani"
@@ -109,7 +109,7 @@
     "message": "Rudi kwenye Zote"
   },
   "backupApprovalInfo": {
-    "message": "Msimbo huu wa siri unahitajika ili kurejesha waleti yako ikitokea umepoteza kifaa chako, umesahau nenosiri lako, umelazimika kusakinisha Qnekt, au unataka kufikia waleti yako kwenye kifaa kingine."
+    "message": "Msimbo huu wa siri unahitajika ili kurejesha waleti yako ikitokea umepoteza kifaa chako, umesahau nenosiri lako, umelazimika kusakinisha Altmasq, au unataka kufikia waleti yako kwenye kifaa kingine."
   },
   "backupApprovalNotice": {
     "message": "Hifadhi msimbo wa Siri wa Kurejesha data ili kuweka salama waleti yako na fedha."
@@ -137,7 +137,7 @@
     "message": "Nunua $1 kwa kutumia Wyre"
   },
   "buyWithWyreDescription": {
-    "message": "Wyre inakuwezesha kutumia kadi ya benki kuweka $1 moja kwa moja kwenye akaunti yako ya Qnekt."
+    "message": "Wyre inakuwezesha kutumia kadi ya benki kuweka $1 moja kwa moja kwenye akaunti yako ya Altmasq."
   },
   "cancel": {
     "message": "Ghairi"
@@ -152,7 +152,7 @@
     "message": "Utambulisho wa Mnyororo"
   },
   "chromeRequiredForHardwareWallets": {
-    "message": "Unapaswa kutumia Qnekt kwenye Google Chrome ili kuungnisha kwenye Waleti yako ya Programu Maunzi."
+    "message": "Unapaswa kutumia Altmasq kwenye Google Chrome ili kuungnisha kwenye Waleti yako ya Programu Maunzi."
   },
   "clickToRevealSeed": {
     "message": "Bofya hapa ili uonyeshe maneno ya siri"
@@ -311,13 +311,13 @@
     "message": "Kamwe usimpatia mtu yeye kirai hicho."
   },
   "endOfFlowMessage5": {
-    "message": "Kuwa makini na walaghai! Qnekt kamwe haitakuomba kirai chako kianzio."
+    "message": "Kuwa makini na walaghai! Altmasq kamwe haitakuomba kirai chako kianzio."
   },
   "endOfFlowMessage6": {
     "message": "Ikiwa unataka kuhifadhi tena kwa njia mbadla kirai chako kianzio, unaweza kukipata kwenye Mipangilio -> Usalama."
   },
   "endOfFlowMessage8": {
-    "message": "Qnekt haiwezi kurejesha kirai chako kianzio. Pata maelezo ziadi."
+    "message": "Altmasq haiwezi kurejesha kirai chako kianzio. Pata maelezo ziadi."
   },
   "endOfFlowMessage9": {
     "message": "Jifunze zaidi."
@@ -418,7 +418,7 @@
     "message": "Unganisha waleti ya programu maunzi"
   },
   "hardwareWalletsMsg": {
-    "message": "Chagua waleti ya programu maunzi ambayo ungependa kutumia kwenye Qnekt"
+    "message": "Chagua waleti ya programu maunzi ambayo ungependa kutumia kwenye Altmasq"
   },
   "here": {
     "message": "hapa",
@@ -441,7 +441,7 @@
     "message": "Ingiza Akaunti"
   },
   "importAccountMsg": {
-    "message": "Akaunti zilizoingizwa hazitahusishwa na kirai chako cha kianzio cha akaunti ya Qnekt iliyoundwa awali. Pata maelezo zaidi kuhusu akaunti zilizoingizwa"
+    "message": "Akaunti zilizoingizwa hazitahusishwa na kirai chako cha kianzio cha akaunti ya Altmasq iliyoundwa awali. Pata maelezo zaidi kuhusu akaunti zilizoingizwa"
   },
   "importAccountSeedPhrase": {
     "message": "Hamisha Akaunti kwa kutumia Kirai Kianzio"
@@ -536,7 +536,7 @@
     "message": "Kukuunganisha kwenye Ethereum na Wavutiu Uliotawanywa."
   },
   "metamaskVersion": {
-    "message": "Toleo la Qnekt"
+    "message": "Toleo la Altmasq"
   },
   "mustSelectOne": {
     "message": "Lazima uchague angalau kianzio 1."
@@ -579,8 +579,8 @@
   "newPassword": {
     "message": "Nenosiri Jipya (kiwango cha chini herufi 8)"
   },
-  "newToQnekt": {
-    "message": "Qnekt mpya?"
+  "newToAltmasq": {
+    "message": "Altmasq mpya?"
   },
   "newTotal": {
     "message": "Jumla Mpya"
@@ -634,7 +634,7 @@
     "message": "Shiriki katika MetaMetrics"
   },
   "participateInMetaMetricsDescription": {
-    "message": "Shiriki katika MetaMetrics ili kutusaidia kufanya Qnekt kuwa bora zaidi"
+    "message": "Shiriki katika MetaMetrics ili kutusaidia kufanya Altmasq kuwa bora zaidi"
   },
   "password": {
     "message": "Nenosiri"
@@ -903,16 +903,16 @@
     "message": "Hakikisha hakuna mtu mwingine anayeangalia kwenye skrini yako unapokuwa unakagua msimbo huu."
   },
   "syncWithMobileComplete": {
-    "message": "Umefanikiwa kuoanisha data yako. Furahia programu yako ya simu ya Qnekt!"
+    "message": "Umefanikiwa kuoanisha data yako. Furahia programu yako ya simu ya Altmasq!"
   },
   "syncWithMobileDesc": {
-    "message": "Unaweza kuoanisha akaunti zako na taarifa kwa kifaa chako cha simu ya mkononi. Fungua programu ya simu ya Qnekt, kisha nenda kwenye \"Mipangilio\" na bofya kwenye \"Oanisha kutoka kwenye Kiendelezi cha Kivinjari\""
+    "message": "Unaweza kuoanisha akaunti zako na taarifa kwa kifaa chako cha simu ya mkononi. Fungua programu ya simu ya Altmasq, kisha nenda kwenye \"Mipangilio\" na bofya kwenye \"Oanisha kutoka kwenye Kiendelezi cha Kivinjari\""
   },
   "syncWithMobileDescNewUsers": {
-    "message": "Ikiwa ndio umefungua tu programu ya simu ya Qnekt kwa mara ya kwanza, fuata hatua kwenye simu yako."
+    "message": "Ikiwa ndio umefungua tu programu ya simu ya Altmasq kwa mara ya kwanza, fuata hatua kwenye simu yako."
   },
   "syncWithMobileScanThisCode": {
-    "message": "Kagua msimbo huu kwa kutumia programu yako ya simu ya Qnekt"
+    "message": "Kagua msimbo huu kwa kutumia programu yako ya simu ya Altmasq"
   },
   "syncWithMobileTitle": {
     "message": "Oanisha na simu"
@@ -1003,7 +1003,7 @@
     "message": "Jaribu tena"
   },
   "typePassword": {
-    "message": "Andika nenosiri lako la Qnekt"
+    "message": "Andika nenosiri lako la Altmasq"
   },
   "unapproved": {
     "message": "Haijaidhinishwa"
@@ -1054,7 +1054,7 @@
     "message": "Tembelea Tovuti yetu"
   },
   "welcome": {
-    "message": "Karibu kwenye Qnekt"
+    "message": "Karibu kwenye Altmasq"
   },
   "welcomeBack": {
     "message": "Karibu Tena!"
