--- a/app/_locales/th/messages.json
+++ b/app/_locales/th/messages.json
@@ -25,15 +25,15 @@
     "description": "The description of the application"
   },
   "appName": {
-    "message": "Qnekt",
+    "message": "Altmasq",
     "description": "The name of the application"
   },
   "appNameBeta": {
-    "message": "Qnekt Beta",
+    "message": "Altmasq Beta",
     "description": "The name of the application (Beta)"
   },
   "appNameFlask": {
-    "message": "Qnekt Flask",
+    "message": "Altmasq Flask",
     "description": "The name of the application (Flask)"
   },
   "approve": {
@@ -61,7 +61,7 @@
     "message": "ค่าธรรมเนียม Gas การยกเลิก"
   },
   "chromeRequiredForHardwareWallets": {
-    "message": "คุณต้องใช้ Qnekt บน Google Chrome เพื่อเชื่อมต่อกับ Hardware Wallet ของคุณ"
+    "message": "คุณต้องใช้ Altmasq บน Google Chrome เพื่อเชื่อมต่อกับ Hardware Wallet ของคุณ"
   },
   "confirm": {
     "message": "ยืนยัน"
@@ -151,7 +151,7 @@
     "message": "คุณผ่านการทดสอบแล้ว กรุณารับผิดชอบในการรักษา Seed Phrase ให้ปลอดภัย"
   },
   "endOfFlowMessage5": {
-    "message": "โปรดระวังฟิชชิ่ง Qnekt จะไม่ขอ Seed Phrase ของคุณโดยไม่มีการแจ้งล่วงหน้าเลย"
+    "message": "โปรดระวังฟิชชิ่ง Altmasq จะไม่ขอ Seed Phrase ของคุณโดยไม่มีการแจ้งล่วงหน้าเลย"
   },
   "endOfFlowMessage9": {
     "message": "เรียนรู้เพิ่มเติม"
@@ -281,7 +281,7 @@
     "message": "ข้อความ"
   },
   "metamaskDescription": {
-    "message": "Qnekt คือที่เก็บตัวตนนิรภัยสำหรับอีเธอเรียม"
+    "message": "Altmasq คือที่เก็บตัวตนนิรภัยสำหรับอีเธอเรียม"
   },
   "mustSelectOne": {
     "message": "ต้องเลือกอย่างน้อย 1 โทเค็น"
@@ -315,8 +315,8 @@
   "newPassword": {
     "message": "รหัสผ่านใหม่(ขั้นต่ำ 8 ตัวอักษร)"
   },
-  "newToQnekt": {
-    "message": "เพิ่งเริ่มใช้ Qnekt?"
+  "newToAltmasq": {
+    "message": "เพิ่งเริ่มใช้ Altmasq?"
   },
   "newTransactionFee": {
     "message": "ค่าธรรมเนียมธุรกรรมใหม่"
@@ -334,7 +334,7 @@
     "message": "เปิด"
   },
   "participateInMetaMetricsDescription": {
-    "message": "เข้าร่วมใน MetaMetrics เพื่อช่วยเราในการพัฒนา Qnekt"
+    "message": "เข้าร่วมใน MetaMetrics เพื่อช่วยเราในการพัฒนา Altmasq"
   },
   "pastePrivateKey": {
     "message": "วางคีย์ส่วนตัวของคุณที่นี่:",
@@ -459,7 +459,7 @@
     "message": "สัญลักษณ์จะต้องมีความยาว 11 ตัวอักษร"
   },
   "syncWithMobileComplete": {
-    "message": "ซิงค์ข้อมูลของคุณเรียบร้อยแล้ว ใช้แอพ Qnekt ให้สนุกนะ!"
+    "message": "ซิงค์ข้อมูลของคุณเรียบร้อยแล้ว ใช้แอพ Altmasq ให้สนุกนะ!"
   },
   "terms": {
     "message": "ข้อตกลงในการใช้งาน"
@@ -523,7 +523,7 @@
     "message": "เยี่ยมชมเว็บไซต์ของเรา"
   },
   "welcome": {
-    "message": "ยินดีต้อนรับสู่ Qnekt เบต้า"
+    "message": "ยินดีต้อนรับสู่ Altmasq เบต้า"
   },
   "youSign": {
     "message": "คุณกำลังเซ็นชื่อ"
