--- a/app/_locales/uk/messages.json
+++ b/app/_locales/uk/messages.json
@@ -33,7 +33,7 @@
     "message": "журнал активності"
   },
   "addAcquiredTokens": {
-    "message": "Додайте токени, отримані за допомогою Qnekt"
+    "message": "Додайте токени, отримані за допомогою Altmasq"
   },
   "addAlias": {
     "message": "Додати псевдо"
@@ -61,15 +61,15 @@
     "description": "The description of the application"
   },
   "appName": {
-    "message": "Qnekt",
+    "message": "Altmasq",
     "description": "The name of the application"
   },
   "appNameBeta": {
-    "message": "Qnekt Beta",
+    "message": "Altmasq Beta",
     "description": "The name of the application (Beta)"
   },
   "appNameFlask": {
-    "message": "Qnekt Flask",
+    "message": "Altmasq Flask",
     "description": "The name of the application (Flask)"
   },
   "approve": {
@@ -97,7 +97,7 @@
     "message": "Таймер автоматичного виходу (хвилин)"
   },
   "autoLockTimeLimitDescription": {
-    "message": "Встановіть час відсутності активності у хвилинах після якого Qnekt буде здійснювати автоматичний вихід"
+    "message": "Встановіть час відсутності активності у хвилинах після якого Altmasq буде здійснювати автоматичний вихід"
   },
   "average": {
     "message": "У середньому"
@@ -109,7 +109,7 @@
     "message": "Повернутися до всіх"
   },
   "backupApprovalInfo": {
-    "message": "Цей секретний код буде потрібен, щоб відновити ваш гаманець у разі втрати вашого пристрою, забуття паролю, потреби у перевстановленні Qnekt або виникнення бажання отримати доступ до вашого гаманця з іншого пристрою."
+    "message": "Цей секретний код буде потрібен, щоб відновити ваш гаманець у разі втрати вашого пристрою, забуття паролю, потреби у перевстановленні Altmasq або виникнення бажання отримати доступ до вашого гаманця з іншого пристрою."
   },
   "backupApprovalNotice": {
     "message": "Створіть резервну копію вашого Секретного кода відновлення, щоб ваш гаманець та ваші кошти залишались у безпеці."
@@ -140,7 +140,7 @@
     "message": "Купити $1 через Wyre"
   },
   "buyWithWyreDescription": {
-    "message": "Wyre дає змогу використовувати кредитну картку для внесення валюти $1 безпосередньо у свій гаманець Qnekt."
+    "message": "Wyre дає змогу використовувати кредитну картку для внесення валюти $1 безпосередньо у свій гаманець Altmasq."
   },
   "bytes": {
     "message": "Байти"
@@ -158,7 +158,7 @@
     "message": "ID мережі"
   },
   "chromeRequiredForHardwareWallets": {
-    "message": "Щоб підключитися до апаратного гаманця, розширення Qnekt потрібно використовувати в Google Chrome."
+    "message": "Щоб підключитися до апаратного гаманця, розширення Altmasq потрібно використовувати в Google Chrome."
   },
   "clickToRevealSeed": {
     "message": "Клацніть тут, щоб відкрити секретні слова"
@@ -317,13 +317,13 @@
     "message": "Ніколи не передавайте цю фразу нікому."
   },
   "endOfFlowMessage5": {
-    "message": "Остерігайтесь фішингу! Qnekt ніколи не запитуватиме вашої початкової фрази."
+    "message": "Остерігайтесь фішингу! Altmasq ніколи не запитуватиме вашої початкової фрази."
   },
   "endOfFlowMessage6": {
     "message": "Якщо вам потрібно знову зробити резервну копію вашої початкової фрази, ви можете знайти її у Налаштування -> Безпека."
   },
   "endOfFlowMessage8": {
-    "message": "Qnekt не вдалося відновити вашу мнемонічну фразу. Докладніше."
+    "message": "Altmasq не вдалося відновити вашу мнемонічну фразу. Докладніше."
   },
   "endOfFlowMessage9": {
     "message": "Дізнатись більше."
@@ -428,7 +428,7 @@
     "message": "Під'єднати апаратний гаманець"
   },
   "hardwareWalletsMsg": {
-    "message": "Оберіть апаратний гаманець, який ви хочете використовувати з Qnekt"
+    "message": "Оберіть апаратний гаманець, який ви хочете використовувати з Altmasq"
   },
   "here": {
     "message": "тут",
@@ -454,7 +454,7 @@
     "message": "Імпортувати обліковий запис"
   },
   "importAccountMsg": {
-    "message": "Імпортовані облікові записи не будуть пов'язані з вашою первісно створеною початковою фразою облікового запису Qnekt. Дізнайтесь більше про імпортовані облікові записи"
+    "message": "Імпортовані облікові записи не будуть пов'язані з вашою первісно створеною початковою фразою облікового запису Altmasq. Дізнайтесь більше про імпортовані облікові записи"
   },
   "importAccountSeedPhrase": {
     "message": "Імпортувати обліковий запис з початковою фразою"
@@ -558,7 +558,7 @@
     "message": "Під'єднуємо вас до Ethereum та децентралізованої мережі."
   },
   "metamaskVersion": {
-    "message": "Версія Qnekt"
+    "message": "Версія Altmasq"
   },
   "mustSelectOne": {
     "message": "Слід вибрати хоча б 1 токен."
@@ -601,8 +601,8 @@
   "newPassword": {
     "message": "Новий пароль (мінімум 8 символів)"
   },
-  "newToQnekt": {
-    "message": "Вперше в Qnekt?"
+  "newToAltmasq": {
+    "message": "Вперше в Altmasq?"
   },
   "newTotal": {
     "message": "Новий підсумок"
@@ -656,7 +656,7 @@
     "message": "Взяти участь у MetaMetrics"
   },
   "participateInMetaMetricsDescription": {
-    "message": "Беріть участь у програмі MetaMetrics, щоб допомогти нам покращити Qnekt"
+    "message": "Беріть участь у програмі MetaMetrics, щоб допомогти нам покращити Altmasq"
   },
   "password": {
     "message": "Пароль"
@@ -925,16 +925,16 @@
     "message": "Переконайтесь, що ніхто не дивиться на ваш екран, коли скануєте цей код"
   },
   "syncWithMobileComplete": {
-    "message": "Ваші дані були успішно синхронізовані. Насолоджуйтесь мобільним застосунком Qnekt!"
+    "message": "Ваші дані були успішно синхронізовані. Насолоджуйтесь мобільним застосунком Altmasq!"
   },
   "syncWithMobileDesc": {
-    "message": "Ви можете синхронізувати ваші облікові записи та інформацію з вашим мобільним пристроєм. Відкрийте мобільний застосунок Qnekt, перейдіть до \"Налаштування\" та клацніть на \"Синхронізувати з розширення браузера\""
+    "message": "Ви можете синхронізувати ваші облікові записи та інформацію з вашим мобільним пристроєм. Відкрийте мобільний застосунок Altmasq, перейдіть до \"Налаштування\" та клацніть на \"Синхронізувати з розширення браузера\""
   },
   "syncWithMobileDescNewUsers": {
-    "message": "Якщо ви відкрили мобільний застосунок Qnekt вперше, просто слідуйте крокам у вашому телефоні."
+    "message": "Якщо ви відкрили мобільний застосунок Altmasq вперше, просто слідуйте крокам у вашому телефоні."
   },
   "syncWithMobileScanThisCode": {
-    "message": "Відскануйте цей код за допомогою мобільної програми Qnekt"
+    "message": "Відскануйте цей код за допомогою мобільної програми Altmasq"
   },
   "syncWithMobileTitle": {
     "message": "Синхронізувати з мобільним"
@@ -1025,7 +1025,7 @@
     "message": "Повторити"
   },
   "typePassword": {
-    "message": "Введіть ваш пароль Qnekt"
+    "message": "Введіть ваш пароль Altmasq"
   },
   "unapproved": {
     "message": "Не затверджено"
@@ -1076,7 +1076,7 @@
     "message": "Відвідайте наш веб-сайт"
   },
   "welcome": {
-    "message": "Ласкаво просимо до Qnekt"
+    "message": "Ласкаво просимо до Altmasq"
   },
   "welcomeBack": {
     "message": "З поверненням!"
