Update description from ethereum to htmlcoin

--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -248,7 +248,7 @@
     "message": "Betrag"
   },
   "appDescription": {
-    "message": "Ethereum Browsererweiterung",
+    "message": "Htmlcoin Browsererweiterung",
     "description": "The description of the application"
   },
   "appName": {
