--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -327,7 +327,7 @@
     "message": "Amount"
   },
   "appDescription": {
-    "message": "An Ethereum Wallet in your Browser",
+    "message": "A Htmlcoin Wallet in your Browser",
     "description": "The description of the application"
   },
   "appName": {
