--- a/app/_locales/ko/messages.json
+++ b/app/_locales/ko/messages.json
@@ -252,7 +252,7 @@
     "message": "금액"
   },
   "appDescription": {
-    "message": "브라우저의 이더리움 지갑",
+    "message": "브라우저의 HTMLCOIN 지갑",
     "description": "The description of the application"
   },
   "appName": {
