--- a/app/_locales/pt/messages.json
+++ b/app/_locales/pt/messages.json
@@ -252,7 +252,7 @@
     "message": "Valor"
   },
   "appDescription": {
-    "message": "Extensão para o browser de Ethereum",
+    "message": "Extensão para o browser de Htmlcoin",
     "description": "The description of the application"
   },
   "appName": {
