--- a/app/_locales/am/messages.json
+++ b/app/_locales/am/messages.json
@@ -51,7 +51,7 @@
     "message": "ሰርዝ "
   },
   "appDescription": {
-    "message": "በማሰሺያዎ ውስጥ የ Ethereum ቋት",
+    "message": "በማሰሺያዎ ውስጥ የ Htmlcoin ቋት",
     "description": "The description of the application"
   },
   "appName": {
