--- a/app/_locales/lv/messages.json
+++ b/app/_locales/lv/messages.json
@@ -57,7 +57,7 @@
     "message": "Apjoms"
   },
   "appDescription": {
-    "message": "Ethereum maks pārlūkā",
+    "message": "Htmlcoin maks pārlūkā",
     "description": "The description of the application"
   },
   "appName": {
